new logo location.

--- a/trifold-leaflet.tex
+++ b/trifold-leaflet.tex
@@ -16,8 +16,7 @@
 
 
 \begin{center} 
-\includegraphics[scale=0.6]{logo.png} \\
-\Large Gainesville Hackerspace
+\includegraphics[scale=0.6]{logos/logo.png} \\
 \normalsize
 \end{center}
 
