--- a/trifold-leaflet.tex
+++ b/trifold-leaflet.tex
@@ -17,6 +17,11 @@
 
 \begin{center} 
 \includegraphics[scale=0.6]{logos/logo.png} \\
+\Large
+Gainesville\\
+Hackerspace\\
+
+
 \normalsize
 \end{center}
 
